--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="intro">
                 <h1 class="name">Murali Krishna</h1>
-                <p>I am a web devloper</p>
+                <p>I am a Web Devloper</p>
             </div>
             <div class="links">
                 <a class="navbar-link" href="#about">About</a>
@@ -52,32 +52,16 @@
                 </div>
 
             </div>
-            <div>   
-                <h1 class="profile-heading">Projects</h1>
-                <div class="slideshow-container">
-                    <div class="mySlides fade">
-                        <div class="numbertext">1 / 3</div>
-                            <img src="https://res.cloudinary.com/dtbojznp3/image/upload/v1758620418/Screenshot_2025-09-23_150811_yl0gsx.png" style="width:100%">
-                        <div class="text">TechMates</div>
-                    </div>
-                    <div class="mySlides fade">
-                        <div class="numbertext">2 / 3</div>
-                            <img src="https://res.cloudinary.com/dtbojznp3/image/upload/v1758087853/image_1_rvhd77.jpg" style="width:100%">
-                        <div class="text">HappyFoods</div>
-                    </div>
-                    <div class="mySlides fade">
-                        <div class="numbertext">3 / 3</div>
-                            <img src="https://res.cloudinary.com/dtbojznp3/image/upload/v1758279166/certificate_1_kptaad.png" style="width:100%">
-                        <div class="text">YouTube Clone</div>
-                    </div>
-                <a class="prev" onclick="plusSlides(-1)">❮</a>
-                <a class="next" onclick="plusSlides(1)">❯</a>
+            <h1 class="profile-heading">Projects</h1>
+            <div class="project-card-container">   
+                <div class="project-card first-project">
+                    <button class="live-link"><a target="_blank" href="https://grooty.netlify.app/">Live</a></button>
                 </div>
-                <br>
-                <div style="text-align:center">
-                    <span class="dot" onclick="currentSlide(1)"></span> 
-                    <span class="dot" onclick="currentSlide(2)"></span> 
-                    <span class="dot" onclick="currentSlide(3)"></span> 
+                <div class="project-card second-project">
+                    <button class="live-link"><a target="_blank" href="https://happyfoods.netlify.app/">Live</a></button>
+                </div>
+                <div class="project-card third-project">
+                    <button class="live-link"><a target="_blank" href="https://www.techmates.online/">Live</a></button>
                 </div>
             </div>  
         </section>
@@ -104,3 +88,29 @@
 <script src="/index.js"></script>
 </body>
 </html>
+
+<!-- <div class="slideshow-container">
+                    <div class="mySlides fade">
+                        <div class="numbertext">1 / 3</div>
+                            <img src="https://res.cloudinary.com/dtbojznp3/image/upload/v1758620418/Screenshot_2025-09-23_150811_yl0gsx.png" style="width:100%">
+                        <div class="text">TechMates</div>
+                    </div>
+                    <div class="mySlides fade">
+                        <div class="numbertext">2 / 3</div>
+                            <img src="https://res.cloudinary.com/dtbojznp3/image/upload/v1758087853/image_1_rvhd77.jpg" style="width:100%">
+                        <div class="text">HappyFoods</div>
+                    </div>
+                    <div class="mySlides fade">
+                        <div class="numbertext">3 / 3</div>
+                            <img src="https://res.cloudinary.com/dtbojznp3/image/upload/v1758279166/certificate_1_kptaad.png" style="width:100%">
+                        <div class="text">YouTube Clone</div>
+                    </div>
+                <a class="prev" onclick="plusSlides(-1)">❮</a>
+                <a class="next" onclick="plusSlides(1)">❯</a>
+                </div>
+                <br>
+                <div style="text-align:center">
+                    <span class="dot" onclick="currentSlide(1)"></span> 
+                    <span class="dot" onclick="currentSlide(2)"></span> 
+                    <span class="dot" onclick="currentSlide(3)"></span> 
+                </div> -->
